kubernetes/platform/apprise/overlays/k3s-01/apprise-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apprise
  namespace: notifications
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: apprise
  template:
    metadata:
      labels:
        app.kubernetes.io/name: apprise
    spec:
      containers:
        - name: apprise
          image: caronc/apprise:1.3.3
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /status
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /status
              port: http
            initialDelaySeconds: 30
            periodSeconds: 60
          volumeMounts:
            - name: config
              mountPath: /config
            - name: attach
              mountPath: /attach
      volumes:
        - name: apprise-config
          secret:
            secretName: apprise-config
        - name: config
          emptyDir: {}
        - name: attach
          emptyDir: {}
