kubernetes/platform/apprise/overlays/k3s-01/apprise-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apprise
  namespace: notifications
  annotations:
    argocd.argoproj.io/sync-wave: "6"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: apprise
  ports:
    - name: http
      port: 8000
      targetPort: http
