kubernetes/platform/apprise/overlays/k3s-01/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apprise
  namespace: notifications
  annotations:
    argocd.argoproj.io/sync-wave: "8"
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - apprise.infra.plexplease.com
      secretName: apprise-tls
  rules:
    - host: apprise.infra.plexplease.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apprise
                port:
                  number: 8000
